5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/225/users/4013/executions/1756_762.log
== TEST (2019-05-28 21:05:30) 
-- CODE:
from numpy import *
# Vetor contendo o nome dos meses do ano
vet_mes = array(['janeiro', 'fevereiro', 'marco', 'abril', 'maio', 'junho',
					  'julho', 'agosto', 'setembro','outubro', 'novembro', 'dezembro'])
data = input("data (ddmmaaaa):")
dd = int(data[:1])
aaaa = int(data[4:])
mm = int(vet_mes)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 21:06:59) 
-- CODE:
from numpy import *
# Vetor contendo o nome dos meses do ano
vet_mes = array(['janeiro', 'fevereiro', 'marco', 'abril', 'maio', 'junho',
					  'julho', 'agosto', 'setembro','outubro', 'novembro', 'dezembro'])
data = input("data (ddmmaaaa):")
dd = int(data[:1])
aaaa = int(data[4:])
mm = int(vet_mes)

print(dd , "de" , mm, "de", aaaa)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-28 21:09:19) 
-- CODE:
from numpy import *
# Vetor contendo o nome dos meses do ano
vet_mes = array(['janeiro', 'fevereiro', 'marco', 'abril', 'maio', 'junho',
					  'julho', 'agosto', 'setembro','outubro', 'novembro', 'dezembro'])
data = input("data (ddmmaaaa):")
dd = int(data[:1])
aaaa = int(data[4:])
mm = int(data[2:3])

m = int(vet_mes)
print(dd , "de" , m, "de", aaaa)

-- EXECUTION TIME:
0.343793
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1756/762/main.py", line 10, in <module>
    m = int(vet_mes)
TypeError: only size-1 arrays can be converted to Python scalars

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-28 21:09:23) 
-- CODE:
from numpy import *
# Vetor contendo o nome dos meses do ano
vet_mes = array(['janeiro', 'fevereiro', 'marco', 'abril', 'maio', 'junho',
					  'julho', 'agosto', 'setembro','outubro', 'novembro', 'dezembro'])
data = input("data (ddmmaaaa):")
dd = int(data[:1])
aaaa = int(data[4:])
mm = int(data[2:3])

m = int(vet_mes)
print(dd , "de" , m, "de", aaaa)

-- EXECUTION TIME:
0.529292
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1756/762/main.py", line 10, in <module>
    m = int(vet_mes)
TypeError: only size-1 arrays can be converted to Python scalars

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-28 21:09:24) 
-- CODE:
from numpy import *
# Vetor contendo o nome dos meses do ano
vet_mes = array(['janeiro', 'fevereiro', 'marco', 'abril', 'maio', 'junho',
					  'julho', 'agosto', 'setembro','outubro', 'novembro', 'dezembro'])
data = input("data (ddmmaaaa):")
dd = int(data[:1])
aaaa = int(data[4:])
mm = int(data[2:3])

m = int(vet_mes)
print(dd , "de" , m, "de", aaaa)

-- EXECUTION TIME:
0.588886
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1756/762/main.py", line 10, in <module>
    m = int(vet_mes)
TypeError: only size-1 arrays can be converted to Python scalars

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 21:09:24) 
-- CODE:
from numpy import *
# Vetor contendo o nome dos meses do ano
vet_mes = array(['janeiro', 'fevereiro', 'marco', 'abril', 'maio', 'junho',
					  'julho', 'agosto', 'setembro','outubro', 'novembro', 'dezembro'])
data = input("data (ddmmaaaa):")
dd = int(data[:1])
aaaa = int(data[4:])
mm = int(data[2:3])

m = int(vet_mes)
print(dd , "de" , m, "de", aaaa)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-28 21:09:24) 
-- CODE:
from numpy import *
# Vetor contendo o nome dos meses do ano
vet_mes = array(['janeiro', 'fevereiro', 'marco', 'abril', 'maio', 'junho',
					  'julho', 'agosto', 'setembro','outubro', 'novembro', 'dezembro'])
data = input("data (ddmmaaaa):")
dd = int(data[:1])
aaaa = int(data[4:])
mm = int(data[2:3])

m = int(vet_mes)
print(dd , "de" , m, "de", aaaa)

-- EXECUTION TIME:
1.05136
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1756/762/main.py", line 10, in <module>
    m = int(vet_mes)
TypeError: only size-1 arrays can be converted to Python scalars

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 21:09:45) 
-- CODE:
from numpy import *
# Vetor contendo o nome dos meses do ano
vet_mes = array(['janeiro', 'fevereiro', 'marco', 'abril', 'maio', 'junho',
					  'julho', 'agosto', 'setembro','outubro', 'novembro', 'dezembro'])
data = input("data (ddmmaaaa):")
dd = int(data[:1])
aaaa = int(data[4:])
mm = int(data[2:3])

print(dd , "de" , m, "de", aaaa)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-28 21:09:50) 
-- CODE:
from numpy import *
# Vetor contendo o nome dos meses do ano
vet_mes = array(['janeiro', 'fevereiro', 'marco', 'abril', 'maio', 'junho',
					  'julho', 'agosto', 'setembro','outubro', 'novembro', 'dezembro'])
data = input("data (ddmmaaaa):")
dd = int(data[:1])
aaaa = int(data[4:])
mm = int(data[2:3])

print(dd , "de" , m, "de", aaaa)

-- EXECUTION TIME:
0.438917
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1756/762/main.py", line 10, in <module>
    print(dd , "de" , m, "de", aaaa)
NameError: name 'm' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 21:09:54) 
-- CODE:
from numpy import *
# Vetor contendo o nome dos meses do ano
vet_mes = array(['janeiro', 'fevereiro', 'marco', 'abril', 'maio', 'junho',
					  'julho', 'agosto', 'setembro','outubro', 'novembro', 'dezembro'])
data = input("data (ddmmaaaa):")
dd = int(data[:1])
aaaa = int(data[4:])
mm = int(data[2:3])

print(dd , "de" , m, "de", aaaa)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 21:10:06) 
-- CODE:
from numpy import *
# Vetor contendo o nome dos meses do ano
vet_mes = array(['janeiro', 'fevereiro', 'marco', 'abril', 'maio', 'junho',
					  'julho', 'agosto', 'setembro','outubro', 'novembro', 'dezembro'])
data = input("data (ddmmaaaa):")
dd = int(data[:1])
aaaa = int(data[4:])
mm = int(data[2:3])

print(dd , "de" ,mm, "de", aaaa)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 21:11:07) 
-- CODE:
from numpy import *
# Vetor contendo o nome dos meses do ano
vet_mes = array(['janeiro', 'fevereiro', 'marco', 'abril', 'maio', 'junho',
					  'julho', 'agosto', 'setembro','outubro', 'novembro', 'dezembro'])
data = input("data (ddmmaaaa):")
dd = int(data[:1])
mm = int(data[2:3])
aaaa = int(data[4:])
print(dd , "de" ,mm, "de", aaaa)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 21:11:57) 
-- CODE:
from numpy import *
# Vetor contendo o nome dos meses do ano
vet_mes = array(['janeiro', 'fevereiro', 'marco', 'abril', 'maio', 'junho',
					  'julho', 'agosto', 'setembro','outubro', 'novembro', 'dezembro'])
data = input("data (ddmmaaaa):")
dd = int(data[:1])
mm = int(data[2:4])
aaaa = int(data[5:])
print(dd , "de" ,mm, "de", aaaa)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 21:12:55) 
-- CODE:
from numpy import *
# Vetor contendo o nome dos meses do ano
vet_mes = array(['janeiro', 'fevereiro', 'marco', 'abril', 'maio', 'junho',
					  'julho', 'agosto', 'setembro','outubro', 'novembro', 'dezembro'])
data = input("data (ddmmaaaa):")
dd = int(data[:1])
mm = int(data[2:3])
aaaa = int(data[4:])
print(dd , "de" ,mm, "de", aaaa)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 21:12:56) 
-- CODE:
from numpy import *
# Vetor contendo o nome dos meses do ano
vet_mes = array(['janeiro', 'fevereiro', 'marco', 'abril', 'maio', 'junho',
					  'julho', 'agosto', 'setembro','outubro', 'novembro', 'dezembro'])
data = input("data (ddmmaaaa):")
dd = int(data[:1])
mm = int(data[2:3])
aaaa = int(data[4:])
print(dd , "de" ,mm, "de", aaaa)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 21:13:21) 
-- CODE:
from numpy import *
# Vetor contendo o nome dos meses do ano
vet_mes = array(['janeiro', 'fevereiro', 'marco', 'abril', 'maio', 'junho',
					  'julho', 'agosto', 'setembro','outubro', 'novembro', 'dezembro'])
data = input("data (ddmmaaaa):")
dd = int(data[0:1])
mm = int(data[2:3])
aaaa = int(data[4:])
print(dd , "de" ,mm, "de", aaaa)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 21:13:38) 
-- CODE:
from numpy import *
# Vetor contendo o nome dos meses do ano
vet_mes = array(['janeiro', 'fevereiro', 'marco', 'abril', 'maio', 'junho',
					  'julho', 'agosto', 'setembro','outubro', 'novembro', 'dezembro'])
data = input("data (ddmmaaaa):")
dd = int(data[0:2])
mm = int(data[2:3])
aaaa = int(data[4:])
print(dd , "de" ,mm, "de", aaaa)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 21:13:55) 
-- CODE:
from numpy import *
# Vetor contendo o nome dos meses do ano
vet_mes = array(['janeiro', 'fevereiro', 'marco', 'abril', 'maio', 'junho',
					  'julho', 'agosto', 'setembro','outubro', 'novembro', 'dezembro'])
data = input("data (ddmmaaaa):")
dd = int(data[:2])
mm = int(data[2:3])
aaaa = int(data[4:])
print(dd , "de" ,mm, "de", aaaa)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 21:14:21) 
-- CODE:
from numpy import *
# Vetor contendo o nome dos meses do ano
vet_mes = array(['janeiro', 'fevereiro', 'marco', 'abril', 'maio', 'junho',
					  'julho', 'agosto', 'setembro','outubro', 'novembro', 'dezembro'])
data = input("data (ddmmaaaa):")
dd = int(data[:2])
mm = int(data[3:4])
aaaa = int(data[5:])
print(dd , "de" ,mm, "de", aaaa)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 21:14:57) 
-- CODE:
from numpy import *
# Vetor contendo o nome dos meses do ano
vet_mes = array(['janeiro', 'fevereiro', 'marco', 'abril', 'maio', 'junho',
					  'julho', 'agosto', 'setembro','outubro', 'novembro', 'dezembro'])
data = input("data (ddmmaaaa):")
dd = int(data[:2])
mm = int(data[2:3])
aaaa = int(data[4:])
print(dd , "de" ,mm, "de", aaaa)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 21:15:15) 
-- CODE:
from numpy import *
# Vetor contendo o nome dos meses do ano
vet_mes = array(['janeiro', 'fevereiro', 'marco', 'abril', 'maio', 'junho',
					  'julho', 'agosto', 'setembro','outubro', 'novembro', 'dezembro'])
data = input("data (ddmmaaaa):")
dd = int(data[:2])
mm = int(data[2:])
aaaa = int(data[4:])
print(dd , "de" ,mm, "de", aaaa)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 21:15:37) 
-- CODE:
from numpy import *
# Vetor contendo o nome dos meses do ano
vet_mes = array(['janeiro', 'fevereiro', 'marco', 'abril', 'maio', 'junho',
					  'julho', 'agosto', 'setembro','outubro', 'novembro', 'dezembro'])
data = input("data (ddmmaaaa):")
dd = int(data[:2])
mm = int(data[3])
aaaa = int(data[4:])
print(dd , "de" ,mm, "de", aaaa)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 21:23:00) 
-- CODE:
from numpy import *
# Vetor contendo o nome dos meses do ano
vet_mes = array(['janeiro', 'fevereiro', 'marco', 'abril', 'maio', 'junho',
					  'julho', 'agosto', 'setembro','outubro', 'novembro', 'dezembro'])
data = input("data (ddmmaaaa):")
dd = int(data[:2])
mm = int(data[3])
aaaa = int(data[4:])

if(mm == 1):
	msg = "janeiro"
print(dd , "de" ,msg, "de", aaaa)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 21:46:21) 
-- CODE:
from numpy import *
# Vetor contendo o nome dos meses do ano
vet_mes = array(['janeiro', 'fevereiro', 'marco', 'abril', 'maio', 'junho',
					  'julho', 'agosto', 'setembro','outubro', 'novembro', 'dezembro'])

data = input("data (ddmmaaaa):")
dd = int(data[:2])
mm = int(data[3])
aaaa = int(data[4:])
while(i < data):
	mm = i

print(dd , "de" , mm , "de", aaaa)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 21:48:00) 
-- CODE:
from numpy import *
# Vetor contendo o nome dos meses do ano
vet_mes = array(['janeiro', 'fevereiro', 'marco', 'abril', 'maio', 'junho',
					  'julho', 'agosto', 'setembro','outubro', 'novembro', 'dezembro'])
i = 0
while(i < data):
	mm = i
	i = i + 1
data = input("data (ddmmaaaa):")
dd = int(data[:2])
mm = int(data[3])
aaaa = int(data[4:])


print(dd , "de" , mm , "de", aaaa)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 21:48:42) 
-- CODE:
from numpy import *
# Vetor contendo o nome dos meses do ano
vet_mes = array(['janeiro', 'fevereiro', 'marco', 'abril', 'maio', 'junho',
					  'julho', 'agosto', 'setembro','outubro', 'novembro', 'dezembro'])

data = input("data (ddmmaaaa):")
dd = int(data[:2])
mm = int(data[3])
aaaa = int(data[4:])
i = 0
while(i < data):
	mm = i
	i = i + 1


print(dd , "de" , mm , "de", aaaa)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 21:49:16) 
-- CODE:
from numpy import *
# Vetor contendo o nome dos meses do ano
vet_mes = array(['janeiro', 'fevereiro', 'marco', 'abril', 'maio', 'junho',
					  'julho', 'agosto', 'setembro','outubro', 'novembro', 'dezembro'])

data = input("data (ddmmaaaa):")
dd = int(data[:2])
mm = int(data[3])
aaaa = int(data[4:])
i = 0
while(i < int(data)):
	mm = i
	i = i + 1


print(dd , "de" , mm , "de", aaaa)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 21:49:17) 
-- CODE:
from numpy import *
# Vetor contendo o nome dos meses do ano
vet_mes = array(['janeiro', 'fevereiro', 'marco', 'abril', 'maio', 'junho',
					  'julho', 'agosto', 'setembro','outubro', 'novembro', 'dezembro'])

data = input("data (ddmmaaaa):")
dd = int(data[:2])
mm = int(data[3])
aaaa = int(data[4:])
i = 0
while(i < int(data)):
	mm = i
	i = i + 1


print(dd , "de" , mm , "de", aaaa)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 21:49:52) 
-- CODE:
from numpy import *
# Vetor contendo o nome dos meses do ano
vet_mes = array(['janeiro', 'fevereiro', 'marco', 'abril', 'maio', 'junho',
					  'julho', 'agosto', 'setembro','outubro', 'novembro', 'dezembro'])

data = input("data (ddmmaaaa):")
dd = int(data[:2])
mm = int(data[3])
aaaa = int(data[4:])
i = 0
while(i < int(data)):
	mm = i
	i = i + 1

print(dd , "de" , mm , "de", aaaa)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 21:50:19) 
-- CODE:
from numpy import *
# Vetor contendo o nome dos meses do ano
vet_mes = array(['janeiro', 'fevereiro', 'marco', 'abril', 'maio', 'junho',
					  'julho', 'agosto', 'setembro','outubro', 'novembro', 'dezembro'])

data = input("data (ddmmaaaa):")
dd = int(data[:2])
mm = int(data[3])
aaaa = int(data[4:])
i = 0
while(i < int(data)):
	mm = i
	i = i + 1

print(dd , "de" , mm , "de", aaaa)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-28 21:51:09) 
-- CODE:
from numpy import *
# Vetor contendo o nome dos meses do ano
vet_mes = array(['janeiro', 'fevereiro', 'marco', 'abril', 'maio', 'junho',
					  'julho', 'agosto', 'setembro','outubro', 'novembro', 'dezembro'])

data = input("data (ddmmaaaa):")
dd = int(data[:2])
mm = int(data[3])
aaaa = int(data[4:])
i = 0
while(i < int(data)):
	mm = i
	i = i + 1

print(dd , "de" , mm , "de", aaaa)

-- EXECUTION TIME:
46.4371
-- TEST CASE 1:
---- input:
26111982
---- correct output:
26 de novembro de 1982
---- user output:
26 de 26111981 de 1982
-- TEST CASE 2:
---- input:
07071854
---- correct output:
07 de julho de 1854
---- user output:
data (ddmmaaaa):7 de 7071853 de 1854
-- TEST CASE 3:
---- input:
22082000
---- correct output:
22 de agosto de 2000
---- user output:
data (ddmmaaaa):22 de 22081999 de 2000
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 12:56:57) 
-- CODE:
from numpy import *
# Vetor contendo o nome dos meses do ano
vet_mes = array(['janeiro', 'fevereiro', 'marco', 'abril', 'maio', 'junho',
					  'julho', 'agosto', 'setembro','outubro', 'novembro', 'dezembro'])

data = input("data (ddmmaaaa):")
dd = int(data[:2])
mm = int(data[3])
aaaa = int(data[4:])
i = 0
while(i < int(data)):
	mm = i
	i = i + 1

print(dd , "de" , mm , "de", aaaa)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 13:00:08) 
-- CODE:
from numpy import *
# Vetor contendo o nome dos meses do ano
vet_mes = array(['janeiro', 'fevereiro', 'marco', 'abril', 'maio', 'junho',
					  'julho', 'agosto', 'setembro','outubro', 'novembro', 'dezembro'])

data = input("data (ddmmaaaa):")
dd = (data[:2])
mm = (data[2:4])
aaaa = (data[4:])

p=vet_mes[int(mm[2:4])]

print(dd , "de" , p , "de", aaaa)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 13:00:34) 
-- CODE:
from numpy import *
# Vetor contendo o nome dos meses do ano
vet_mes = array(['janeiro', 'fevereiro', 'marco', 'abril', 'maio', 'junho',
					  'julho', 'agosto', 'setembro','outubro', 'novembro', 'dezembro'])

data = input("data (ddmmaaaa):")
dd = (data[:2])
mm = (data[2:4])
aaaa = (data[4:])

p=vet_mes[int(data[2:4])]

print(dd , "de" , p , "de", aaaa)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 13:00:47) 
-- CODE:
from numpy import *
# Vetor contendo o nome dos meses do ano
vet_mes = array(['janeiro', 'fevereiro', 'marco', 'abril', 'maio', 'junho',
					  'julho', 'agosto', 'setembro','outubro', 'novembro', 'dezembro'])

data = input("data (ddmmaaaa):")
dd = (data[:2])
mm = (data[2:4])
aaaa = (data[4:])

p=vet_mes[int(data[2:4])]

print(dd , "de" , p , "de", aaaa)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 13:01:13) 
-- CODE:
from numpy import *
# Vetor contendo o nome dos meses do ano
vet_mes = array(['janeiro', 'fevereiro', 'marco', 'abril', 'maio', 'junho',
					  'julho', 'agosto', 'setembro','outubro', 'novembro', 'dezembro'])

data = input("data (ddmmaaaa):")
dd = (data[:2])
mm = (data[2:4])
aaaa = (data[4:])

p=vet_mes[int(data[2:4])-1]

print(dd , "de" , p , "de", aaaa)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 13:01:29) 
-- CODE:
from numpy import *
# Vetor contendo o nome dos meses do ano
vet_mes = array(['janeiro', 'fevereiro', 'marco', 'abril', 'maio', 'junho',
					  'julho', 'agosto', 'setembro','outubro', 'novembro', 'dezembro'])

data = input("data (ddmmaaaa):")
dd = (data[:2])
mm = (data[2:4])
aaaa = (data[4:])

p=vet_mes[int(data[2:4])-1]

print(dd , "de" , p , "de", aaaa)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-29 13:01:37) 
-- CODE:
from numpy import *
# Vetor contendo o nome dos meses do ano
vet_mes = array(['janeiro', 'fevereiro', 'marco', 'abril', 'maio', 'junho',
					  'julho', 'agosto', 'setembro','outubro', 'novembro', 'dezembro'])

data = input("data (ddmmaaaa):")
dd = (data[:2])
mm = (data[2:4])
aaaa = (data[4:])

p=vet_mes[int(data[2:4])-1]

print(dd , "de" , p , "de", aaaa)

-- EXECUTION TIME:
0.36831
-- TEST CASE 1:
---- input:
26111982
---- correct output:
26 de novembro de 1982
---- user output:
26 de novembro de 1982
-- TEST CASE 2:
---- input:
07071854
---- correct output:
07 de julho de 1854
---- user output:
07 de julho de 1854
-- TEST CASE 3:
---- input:
22082000
---- correct output:
22 de agosto de 2000
---- user output:
22 de agosto de 2000
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
